<resources>
    <string-array name="units_array">
        <item>Metros</item>
        <item>Kilómetros</item>
        <item>Centímetros</item>
        <item>Pulgadas</item>
        <item>Pies</item>
    </string-array>
    <string name="app_name">Conversor de Unidades</string>
    <string name="hint_input_value">Ingrese el valor</string>
    <string name="label_convert_from">Convertir de</string>
    <string name="label_convert_to">Convertir a</string>
    <string name="button_convert">Convertir</string>
    <string name="result_text">Resultado: </string>
    <string name="dark_mode_switch">Modo Oscuro</string>
    <string name="open_drawer">Abrir menú</string>
    <string name="close_drawer">Cerrar menú</string>

    <string name="profile_image_desc">Imagen de perfil</string>
    <string name="user_name_placeholder">Nombre del Usuario</string>
    <string name="user_email_placeholder">correo@ejemplo.com</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>

</resources>